<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contactus"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.contactus.ContactusFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitleContactus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="36dp"
                android:text="@string/title_contactus"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="195dp"
                android:layout_height="59dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/findhomeflag" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="302dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="32dp"
                android:text="@string/also"
                android:textSize="17sp"
                app:fontFamily="@font/actor" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="300dp"
                android:layout_height="115dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp"
                android:text="@string/description_contactus"
                android:textSize="17sp"
                app:fontFamily="@font/actor" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="48dp"
                android:text="@string/what_want_contactus"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearBtnProductContact"
                android:layout_width="235dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/contact_linear_unselected"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtInformContact"
                    android:layout_width="121dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/product_contact" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="110dp"
                    android:layout_height="50dp"
                    android:src="@drawable/contatusproduct" />

            </LinearLayout>

            <Spinner
                android:id="@+id/spinnerProductContact"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/linearBtnAccountContact"
                android:layout_width="235dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/contact_linear_unselected"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/account_contact"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="53dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/contactusaccount" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
